--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "version": "0.1",
   "port": 6005,
   "serverPath": "http://localhost",
+  "timeoutMinutes": 30,
   "commands": [{
     "binary": "echo",
     "params": ["\"test\""]
